log
Thu May 12 20:13:02 HSP 2022: 
 sudoku.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 49 insertions(+), 2 deletions(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[k]==n->sudo[i][j]) return 0;
      |                       ^
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1.exe: all warnings being treated as errors
Compilation failed
5b44610
Thu May 12 20:14:10 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[k]==n->sudo[i][j]) return 0;
      |                       ^
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1.exe: all warnings being treated as errors
Compilation failed
4d2f865
Thu May 12 20:14:21 HSP 2022: 
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[k]==n->sudo[i][j]) return 0;
      |                       ^
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1.exe: all warnings being treated as errors
Compilation failed
116577e
Thu May 12 20:14:58 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[n->sudo[i][j]]==n->sudo[i][j]) return 0;
      |                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
ca31cb9
